# sitesTool

./: .gitignore  README.md  it-mock-out.txt  it-mock2.txt  it-real-out.txt  mvn-test-out.txt  review_result.json  unit-out.txt
backend/: .env.example  README.md  apply_migration_001.py  apply_migration_002.py  apply_migration_003.py  apply_migration_004_simplify.py  apply_migration_cdp.py  apply_migration_cdp_auto_close.py  apply_migration_cdp_auto_start.py  apply_migration_cdp_v2.py  check_cdp_port.py  check_flow_dsl.py  demo_isolated_mode.py  diagnose_cdp.py  diagnose_cookies.py  find_cookies.py  list_flows.py  list_routes.py  manual_check.py  migrate_add_browser.py  migrate_add_headless.py  migrate_add_screenshot_paths.py  migrate_update_history_structure.py  pyproject.toml  reset_admin.py  run_automation.py  test_browser_launcher.py  test_cdp_bilibili_verification.py  test_cdp_cookies.py  test_cdp_fields.py  test_cdp_manual.py  test_cdp_quick.py  test_cdp_v2.py  test_concurrent_usage.py  test_cookie_persistence.py  test_copied_profile_login.py  test_final_cdp_modes.py  test_output.py  test_tag_api.py  uvicorn.err  (+3 more)
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  scheduler.py  security.py
backend/app/crud/: catalog.py  flow.py  history.py  site.py  user.py
backend/app/db/: session.py
backend/app/models/: __init__.py  auth.py  automation.py  (+4 more)
backend/migrations/: 001_remove_icon_url.sql  002_add_storage_state.sql  003_add_user_data_dir.sql
backend/test_pages/: index.html
backend/tests/: conftest.py
(+463 files in other folders)
